# open-ops

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deps.7z  ops.cmake
docs/: CMakeLists.txt  Doxyfile.all  Doxyfile.all.in  buildhelp.bat
docs/Reprise/: Reprise.chm
install/: CMakeLists.txt
source/Analysis/: AbstractDepGraph.cpp  AnalysisPlugin.cpp  AnalysisPlugin.h  CMakeLists.txt  DeadDeclarations.cpp  ExpressionOrder.cpp  Statistics.cpp
source/Analysis/AliasAnalysis/: AliasAnalyzer.cpp  CallGraphEx.cpp  DistributionValues.cpp  ExprAnalyzer.cpp  MemoryManager.cpp  PointersTable.cpp  ProcAnalyzer.cpp  SetAbstractMemoryCell.cpp  VariablesClassifier.cpp
source/Analysis/AliasAnalysis/testmod/: main.cpp
source/Analysis/CalculationGraph/: CalculationGraph.cpp  CalculationGraphBase.cpp  CalculationGraphBuilder.cpp  restrictions.txt
source/Analysis/CallGraph/: CallGraph.cpp
source/Analysis/Clones/: CloneFinder.cpp  HashDeepWalker.cpp
source/Analysis/Clones/testmods/: CMakeLists.txt  main.cpp
source/Analysis/ComplexOccurrenceAnalysis/: GrouppedOccurrences.cpp
source/Analysis/ConsistCheck/: Conditions.cpp  ConsistCheckService.cpp  ConsistCheckService.h  ConsistCheckWalker.cpp  ConsistCheckWalker.h
source/Analysis/ControlFlowGraph/: ControlFlowGraph.cpp
source/Analysis/ControlFlowGraphEx/: ControlFlowGraphEx.cpp
source/Analysis/DepGraph/: id.cpp
source/Analysis/DepGraph/src/: DepGraph.cpp  LoopStruct.cpp  SubProcAnalysis.cpp
source/Analysis/DepGraph/testmod/: testmod.cpp
source/Analysis/DominanceFrontierGraph/: DominanceFrontierGraph.cpp
source/Analysis/DominanceFrontierGraph/testmod/: CMakeLists.txt  main.cpp
source/Analysis/Frames/: BlockNestAnalizer.cpp  FrameDataSpecification.cpp  FramesGraph.cpp  FramesPartitioner.cpp  ProfilerBridge.cpp  ProfilerFramesPartitioningWalker.h
source/Analysis/InductionVariables/: InductionVariables.cpp
source/Analysis/InductionVariables/testmod/: CMakeLists.txt  main.cpp
source/Analysis/LatticeGraph/: CMakeLists.txt  ComplexCondition.cpp  Correspondence.cpp  ElemLatticeGraph.cpp  ExtendedQuast.cpp  GaussianElimination.cpp  LatticeGraph.cpp  LinearLib.cpp  LoopIndex.cpp  PIP.cpp  ParamPoint.cpp  RationalNumber.cpp  voevodin.cpp
source/Analysis/LatticeGraph/CountIntPoints/: FunctionsVerge.cpp  FunctionsVerge.h  IOfunctions.cpp  IOfunctions.h  LLL.cpp  LLL.h  RationalMatrix.cpp  RationalMatrix.h  StructuresVerge.h
source/Analysis/LatticeGraph/testmod3/: CMakeLists.txt  main.cpp
source/Analysis/LatticeGraph/testmod4/: CMakeLists.txt  input  main.cpp
source/Analysis/LoopsInterchange/: LoopsInterchangeAnalysis.cpp
source/Analysis/MinControlEdgeSet/: MinControlEdgeSet.cpp
source/Analysis/Montego/: Loops.cpp  OccurSearchVisitor.cpp  OccurSearchVisitor.h  Occurrence.cpp  OccurrenceCoeffs.cpp  OccurrenceContainer.cpp  OccurrenceContainerBuilder.cpp  OccurrenceContainerBuilder.h  SafeStatus.cpp
source/Analysis/Montego/AliasAnalysis/: AliasAnalysisContext.cpp  AliasAnalysisContext.h  AliasInterface.cpp  AliasProcedureAnalyzer.cpp  AliasProcedureAnalyzer.h  (+16 more)
source/Analysis/ParallelLoops/: Analysers.cpp  Analysers.h  ParallelLoops.cpp  Privatization.cpp  Privatization.h
source/Analysis/Profiler/: CMakeLists.txt  ProfTextBuilder.cpp  Profiler.cpp  ProfilingInterprocedural.cpp  ProfilingInterprocedural.h  ProfilingWithinSubroutine.cpp  ProfilingWithinSubroutine.h  UsingPlatformSettings.cpp  UsingPlatformSettings.h
source/Analysis/SSAForm/: SSAForm.cpp  VirtualRegistry.cpp
source/Analysis/SymbolPredicateFinder/: SymbolPredicateFinder.cpp
source/Backends/: BackendsHub.cpp  BackendsPlugin.cpp  BackendsPlugin.h  CMakeLists.txt
source/Backends/OutToC/: OutToC.cpp
source/Backends/RepriseToClang/: ClangExpressions.cpp  ClangExpressions.h  ClangGenerator.cpp  ClangGeneratorTypes.cpp  ClangStatements.cpp  ClangStatements.h  ClangTypes.cpp  ClangTypes.h  ClangWalker.cpp  ClangWalker.h  R2CDeclNodes.h  RepriseClangifier.cpp  RepriseClangifier.h
source/Backends/RepriseXml/: RepriseXml.cpp  RepriseXmlPass.cpp
source/OPS_Stage/: CMakeLists.txt  ClangGenerator.cpp  Config.cpp  Passes.cpp  StdStreamWriter.cpp  Utils.cpp  WorkContext.cpp
source/OPS_Stage/testmod/: .gitignore  CMakeLists.txt  main.cpp
source/Shared/: CMakeLists.txt  ProgramContext.cpp  ProgramTextBuilder.cpp  ReadMe.txt  ReferenceMapper.cpp  RepriseClone.cpp  ReprisePath.cpp
source/Shared/ContextNotifier/: ContextNotifier.cpp  ContextObserverBase.cpp  ContextObserverState.cpp  ContextObserverStateManager.cpp
source/Shared/DataShared/: DataShared.cpp  DataSharedDeepWalkers.h
source/Shared/ExpressionHelpers/: ExpressionHelpers.cpp
source/Shared/ExpressionsReduction/: ExpressionPolynomial.cpp
source/Shared/LabelsShared/: LabelsShared.cpp
source/Shared/LinearExpressions/: LinearExpressions.cpp  LinearExpressionsUtils.cpp  ParametricLinearExpressions.cpp
source/Shared/LoopShared/: LoopShared.cpp  LoopSharedDeepWalkers.h
source/Shared/PlatformSettings/: PlatformSettings.cpp
source/Shared/StatementsShared/: StatementsShared.cpp  StatementsSharedDeepWalkers.h
source/Shared/SubroutinesShared/: SubroutinesShared.cpp  SubroutinesSharedDeepWalkers.h
source/Shared/testmod/: CMakeLists.txt  main.cpp
source/Transforms/: CMakeLists.txt  ReadMe.txt  TransformArgs.cpp  TransformationsPlugin.cpp  TransformationsPlugin.h  TransformsHub.cpp  TransformsPasses.cpp
source/Transforms/Data/: CommonBlockToGlobalVars.cpp
source/Transforms/DataDistribution/: BlockAffineDataDistribution.cpp  BlockAffineDataDistributionParameters.cpp  DataDistributionAnalizer.cpp  DataDistributionDeepWalkers.h  ReferencesFinder.h
source/Transforms/Declarations/: CopyDeclarations.cpp  GenerateExtern.cpp  RemoveDeadDeclarations.cpp
source/Transforms/If/: CMakeLists.txt
source/Transforms/Loops/: CMakeLists.txt
source/Transforms/Scalar/: ArithmeticOperatorExpansion.cpp  CMakeLists.txt
source/Transforms/Statements/: DeleteUnusedLabels.cpp  SwapStatements.cpp
source/Transforms/Subroutines/: DeadSubroutineElimination.cpp  InliningWithSubstitution.cpp
(+644 files in other folders)
