# CMakeLists.txt for the transforms library

ops_filesin(
  INTERFACE
  "../../include/Transforms/"
  #
  ITransformation.h
  TransformArgs.h
  TransformsHub.h
  Data/CommonBlockToGlobalVars.h
  #
  DataDistribution/BlockAffineDataDistribution.h
  DataDistribution/BlockAffineDataDistributionParameters.h
  DataDistribution/DataDistributionAnalizer.h
  #
  DataDistribution/Shared/BDExceptions.h
  DataDistribution/Shared/BDParameters.h
  DataDistribution/Shared/DataDistributionForSharedMemory.h
  #
  Declarations/GenerateExtern.h
  Declarations/CopyDeclarations.h
  Declarations/RemoveDeadDeclarations.h
  #
  If/IfDistribution/IfDistribution.h
  If/IfExtraction/IfExtraction.h
  If/IfSplitting/IfSplitting.h
  Loops/DependencyElimination/DependencyElimination.h
  Loops/ExtractInvariant/ExtractInvariant.h
  Loops/IntToVector/IntToVector.h
  Loops/LoopCycleOffset/LoopCycleOffset.h
  Loops/LoopDistribution/LoopDistribution.h
  Loops/LoopFullUnrolling/LoopFullUnrolling.h
  Loops/LoopFusion/LoopFusion.h
  Loops/LoopHeaderRemoval/LoopHeaderRemoval.h
  Loops/LoopInterchange/LoopInterchange.h
  Loops/LoopNesting/LoopNesting.h
  Loops/LoopSplitting/LoopSplitting.h
  Loops/LoopUnrolling/LoopUnrolling.h
  Loops/RecurrentLoops/RecurrentLoops.h
  Loops/RecurrentLoops/RootScan.h
  Loops/StripMining/StripMining.h
  Loops/TempArrays/TempArrays.h
  Loops/Var2Array/Var2Array.h
  MPI/MPIGlobalsProducer/IMPIGlobalsProducer.h
  MPI/MPIGlobalsProducer/MPIGlobalsProducer.h
  MPI/MPIGlobalsProducer/IMPIRankProducer.h
  MPI/MPIGlobalsProducer/MPIRankProducer.h
  MPI/MPIGlobalsProducer/IMPISizeProducer.h
  MPI/MPIGlobalsProducer/MPISizeProducer.h
  MPI/Utils/MPIHelper.h
  MPI/Utils/MPIProducerFactory.h
  Scalar/CommonSubexpressionElimination/CommonSubexpressionElimination.h
  Scalar/ConstantPropagation/ConstantPropagation.h
  Scalar/SubstitutionForward/SubstitutionForward.h
  Scalar/SSASubstitutionForward/SSASubstitutionForward.h
  Scalar/InductionSubstitution/InductionSubstitution.h
  Scalar/LocalizationScalar/LocalizationScalar.h
  #Scalar/SwitchToIf/SwitchToIf.h
  Scalar/ArithmeticOperatorExpansion.h
  Scalar/Silly/SillyTranslationUnit.h
  Statements/SwapStatements.h
  Statements/DeleteUnusedLabels.h
  Subroutines/DeadSubroutineElimination.h
  Subroutines/Inlining.h
  Subroutines/InliningWithSubstitution.h
  Subroutines/SubroutineSplitting.h
  Subroutines/FragmentToSubroutine.h
  DataDistribution/MPI/IMPIDataDistributionGather.h
  DataDistribution/MPI/IMPIDataDistributionScatter.h
  DataDistribution/MPI/IMPISingleAccessAreaProducer.h
  DataDistribution/MPI/MPIDataDistributionGather.h
  DataDistribution/MPI/MPIDataDistributionScatter.h
  DataDistribution/MPI/MPISingleAccessAreaProducer.h
  DataDistribution/MPI/IMPIDataDistributionIteration.h
  DataDistribution/MPI/MPIDataDistributionIteration.h
  DataDistribution/MPI/MPILoopNesting.h
  #
  DataDistribution/MPI/Block/BlocksHelper.h
  DataDistribution/MPI/Block/BlockingDescription.h
  DataDistribution/MPI/Block/BlockIndexesProducer.h
  DataDistribution/MPI/Block/DistributedIndexBuilder.h
  DataDistribution/MPI/Block/BufferCopyingBuilder.h
  DataDistribution/MPI/Block/BlockScatter.h
  DataDistribution/MPI/Block/BlockGather.h
  DataDistribution/MPI/Block/BlockIteration.h
  DataDistribution/MPI/Block/BlockLoopNesting.h
  #
  Helpers/PrepareCadreDeclarations/PrepareCadreDeclarations.h
  Helpers/IsolateFrame/IsolateFrame.h
  #
  TransformsPasses.h
  #
  If/CanonizeIfGoto/CanonizeIfGoto.h
  Loops/Canonizing/ConvertStructCounter.h
  Loops/Canonizing/ConvertLessEqualToLess.h
  Loops/Canonizing/CanonizeFor.h
  #
  Loops/LoopNestBlocking/LoopNestBlocking.h
  #
  Loops/LoopFragmentation/LoopFragmentation.h
  Loops/LoopNestUnification/LoopNestUnification.h
)

ops_project(
    #
    Transforms LIB
    #
  SOURCES
    #
    ${INTERFACE}
    DataDistribution/ReferencesFinder.h
    TransformationsPlugin.h
    TransformationsPlugin.cpp
    TransformArgs.cpp
    TransformsHub.cpp
    Data/CommonBlockToGlobalVars.cpp
    DataDistribution/BlockAffineDataDistribution.cpp
    DataDistribution/MPI/MPIDataDistributionGather.cpp
    DataDistribution/MPI/MPIDataDistributionScatter.cpp
    DataDistribution/MPI/MPIDataDistributionIteration.cpp
    DataDistribution/MPI/MPISingleAccessAreaProducer.cpp
    DataDistribution/MPI/MPILoopNesting.cpp
    DataDistribution/BlockAffineDataDistributionParameters.cpp
    DataDistribution/DataDistributionAnalizer.cpp
    DataDistribution/DataDistributionDeepWalkers.h
    #
    DataDistribution/MPI/Block/BlocksHelper.cpp
    DataDistribution/MPI/Block/BlockingDescription.cpp
    DataDistribution/MPI/Block/BlockIndexesProducer.cpp
    DataDistribution/MPI/Block/DistributedIndexBuilder.cpp
    DataDistribution/MPI/Block/BufferCopyingBuilder.cpp
    DataDistribution/MPI/Block/BlockScatter.cpp
    DataDistribution/MPI/Block/BlockGather.cpp
    DataDistribution/MPI/Block/BlockIteration.cpp
    DataDistribution/MPI/Block/BlockLoopNesting.cpp
    #
    DataDistribution/Shared/include/PragmaInfo.h
    DataDistribution/Shared/include/change_references_algorithms.h
    DataDistribution/Shared/include/shared_helpers.h
    DataDistribution/Shared/include/ReferenceTable.h
    DataDistribution/Shared/include/ArrayDistributionInfo.h
    DataDistribution/Shared/include/DistributedArrayReferenceInfo.h
    DataDistribution/Shared/include/RenameDistributionArrayVisitor.h

    DataDistribution/Shared/change_references_algorithms.cpp
    DataDistribution/Shared/ArrayDistributionInfo.cpp
    DataDistribution/Shared/PragmaInfo.cpp
    DataDistribution/Shared/RenameDistributionArrayVisitor.cpp
    DataDistribution/Shared/shared_helpers.cpp
    DataDistribution/Shared/DataDistributionForSharedMemory.cpp
    DataDistribution/Shared/DistributedArrayReferenceInfo.cpp
    DataDistribution/Shared/ReferenceTable.cpp
    #
    Declarations/GenerateExtern.cpp
    Declarations/CopyDeclarations.cpp
    Declarations/RemoveDeadDeclarations.cpp
    #
    If/CollapseIf/CollapseIf.cpp
    If/CollapseIf/CollapseIf.h
    If/IfDistribution/IfDistribution.cpp
    If/IfDistribution/IfDistributionDeepWalker.h
    If/IfExraction/IfExtraction.cpp
    If/IfExraction/IfExtractionDeepWalkers.h
    If/IfSplitting/IfSplitting.cpp
    Loops/DependencyElimination/DependencyElimination.cpp
    Loops/ExtractInvariant/ExtractInvariant.cpp
    Loops/IntToVector/IntToVector.cpp
    Loops/LoopCycleOffset/LoopCycleOffset.cpp
    Loops/LoopDistribution/LoopDistribution.cpp
    Loops/LoopFullUnrolling/LoopFullUnrolling.cpp
    Loops/LoopFusion/LoopFusion.cpp
    Loops/LoopHeaderRemoval/LoopHeaderRemoval.cpp
    Loops/LoopInterchange/LoopInterchange.cpp
    Loops/LoopNesting/LoopNesting.cpp
    Loops/LoopSplitting/LoopSplitting.cpp
    Loops/LoopUnrolling/LoopUnrolling.cpp
    Loops/RecurrentLoops/RecurrentLoops.cpp
    Loops/RecurrentLoops/RootScan.cpp
    Loops/StripMining/StripMining.cpp
    Loops/TempArrays/TempArrays.cpp
    Loops/Var2Array/Var2Array.cpp
    MPI/MPIGlobalsProducer/MPIGlobalsProducerDeepWalkers.h
    MPI/MPIGlobalsProducer/MPIGlobalsProducer.cpp
    MPI/MPIGlobalsProducer/MPIRankProducer.cpp
    MPI/MPIGlobalsProducer/MPISizeProducer.cpp
    MPI/Utils/MPIHelper.cpp
    MPI/Utils/MPIHelperDeepWalkers.h
    MPI/Utils/MPIProducerFactory.cpp
    Scalar/CommonSubexpressionElimination/CommonSubexpressionElimination.cpp
    Scalar/ConstantPropagation/ConstantPropagation.cpp
    Scalar/ConstantPropagation/ConstantPropagationWalker.cpp
    Scalar/ConstantPropagation/ConstantPropagationWalker.h
    Scalar/SubstitutionForward/SubstitutionForward.cpp
    Scalar/SubstitutionForward/SubstitutionForwardWalker.cpp
    Scalar/SubstitutionForward/SubstitutionForwardWalker.h
    Scalar/SSASubstitutionForward/SSASubstitutionForward.cpp
    Scalar/InductionSubstitution/InductionSubstitution.cpp
    #Scalar/SwitchToIf/SwitchToIf.cpp
    Scalar/ArithmeticOperatorExpansion/ArithmeticOperatorExpansion.cpp
    Scalar/LocalizationScalar/LocalizationScalar.cpp
    Scalar/Silly/SillyTranslationUnit.cpp
    Statements/SwapStatements.cpp
    Statements/DeleteUnusedLabels.cpp
    Subroutines/DeadSubroutineElimination.cpp
    Subroutines/Inlining/Inlining.cpp
    Subroutines/InliningWithSubstitution.cpp
    Subroutines/SubroutineSplitting/SubroutineSplitting.cpp
    Subroutines/FragmentToSubroutine/FragmentToSubroutine.cpp
    Helpers/PrepareCadreDeclarations/PrepareCadreDeclarations.cpp
    Helpers/IsolateFrame/IsolateFrame.cpp
    Loops/Canonizing/ConvertStructCounter.cpp
    Loops/Canonizing/ConvertLessEqualToLess.cpp
    Loops/Canonizing/CanonizeFor.cpp
    #
	TransformsPasses.cpp
    #
    If/CanonizeIfGoto/CanonizeIfGoto.cpp
    #
    Loops/LoopNestBlocking/LoopNestBlocking.cpp
    #
    Loops/LoopFragmentation/LoopFragmentation.cpp
    Loops/LoopNestUnification/LoopNestUnification.cpp
    
  LIBRARIES
    #
    OPS_Core
    Reprise
    Analysis
    Shared
    FrontTransforms
    Frontend
  PUBLIC
)
# OpenOPS comment: add_subdirectory(DataDistribution/Shared/testmod)
add_subdirectory(If)
add_subdirectory(Loops)
add_subdirectory(Scalar)
add_subdirectory(Subroutines/FragmentToSubroutine/testmod)
# End of File
